--- a/src/style/homeStyle.css
+++ b/src/style/homeStyle.css
@@ -40,23 +40,42 @@
   width: 95%;
   border: 5px solid crimson;
 }
-
-#other_messages {
-  align-self: flex-end;
-  background-color: #f1d3d3;
-  max-width: 70%;
-  margin: 5px;
+/* .messageCard {
   padding: 10px;
-  border-radius: 8px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  max-width: 40%;
+  border-radius: 5px;
+  word-wrap: break-word;
+} */
+
+.yourMessage {
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  max-width: 40%;
+  border-radius: 5px;
+  word-wrap: break-word;
+
+  background-color: #007bff;
+  color: white;
+  float: left;
 }
 
-#my_messages {
-  align-self: flex-start;
-  background-color: #f1d3d3;
-  max-width: 70%;
+.otherMessage {
+  max-width: 40%;
+  padding-left: 60%;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   margin: 5px;
-  padding: 10px;
-  border-radius: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  word-wrap: break-word;
+
+  background-color: #e0e0e0;
+  color: white;
+  float: right;
 }
 
 
